completed user activation process, added business types

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./index.js",
     "dev": "nodemon ./index.js",
-    "test": "mocha --watch"
+    "test:activation": "mocha --watch test/activation.js",
+    "test:businsssTypes": "mocha --watch test/businsssTypesCreate.js"
   },
   "repository": {
     "type": "git",
